<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audiometer</string>
    <string name="action_settings">Settings</string>
    <string name="sound_hear_text_view">Click here when you hear the sound</string>
    <string name="title_activity_examination">Examination</string>
    <string name="title_activity_how_to">How To</string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_view_start">start</string>
    <string name="text_view_how_to">how to use</string>
    <string name="text_view_settings">settings</string>
    <string name="text_view_about">about</string>
    <string name="about_alert_title">About</string>
    <string name="about_alert_message">Made by Michał Kuśmierczyk
\nver.</string>
    <string name="test_info_text_view_label">Only for developers</string>
    <string name="save_button_label">Save</string>
    <string name="test_check_box_label">Test Mode</string>
    <string name="how_to_points_text_view">1. Plug in your headphones
        \n2. Put headphones into your ears
        \n3. Tap on \'start\' to begin the examination
        \n4. Tap on the button in the middle of the screen when you hear the sound
        \n5. The result is shown at the end of the examination</string>
    <string name="title_activity_graph">Graph</string>
    <string name="graph_text_view_title">graph</string>
    <string name="how_to_text_view_label">How to</string>
    <string name="version_number" translatable="false">1.2</string>
    <string name="results_dialog_negative_button_text">Details</string>
    <string name="results_dialog_title_text">Result</string>
    <string name="ok_button_text" translatable="false">Ok</string>
    <string name="details_freq_text">"freq.: "</string>
    <string name="details_threshold_text">" hearing threshold: "</string>
    <string name="details_left_ear_text">Left ear:\n</string>
    <string name="details_right_ear_text">Right ear:\n</string>
    <string name="test_number_text_view" translatable="false">Test 1/12</string>
    <string name="result_dialog_hearing_loss_found_text">You may suffer from hearing loss!

Please, contact your doctor.</string>
    <string name="result_dialog_no_hearing_loss_found_text">No hearing loss found.

If in doubt, contact your doctor.</string>

</resources>
