<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@android:color/background_dark"
    tools:ignore="Overdraw">

    <TextView android:id="@+id/start_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/text_view_start"
        android:clickable="true"
        android:onClick=""
        android:layout_below="@+id/graph_text_view" />
    <TextView android:id="@+id/graph_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/graph_text_view_title"
        android:clickable="true"
        android:onClick=""
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:visibility="invisible"/>
    <TextView android:id="@+id/how_to_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/text_view_how_to"
        android:clickable="true"
        android:layout_below="@+id/start_text_view"
        android:onClick=""/>
    <TextView android:id="@+id/settings_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/text_view_settings"
        android:clickable="true"
        android:layout_below="@id/how_to_text_view"
        android:onClick=""/>
    <TextView android:id="@+id/about_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/text_view_about"
        android:clickable="true"
        android:onClick=""
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
